<resources>
    <string name="app_name">K+</string>
    <string name="notices">Notices</string>
    <string name="timetable">Timetable</string>
    <string name="details">Details</string>
    <string name="results">Results</string>
    <string name="groups">Groups</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="present_desc">• Student is present in class \n• Student is in the sick bay \n• Student has a study period \n• Student is in an examination \n• Student is participating in a school activity (whether on site, like a sports day, or off site, like a camp or school trip) \n• Student is on work experience \n• Student has been internally stood down (ie, removed from class but still at school) \n• Student is attending a Secondary Tertiary Programme \n• Student is attending Alternative Education</string>
    <string name="late_desc">• Student is present in class, but arrived late\n• Student is in an examination, but arrived late\n• Student is participating in a school activity, but arrived late\n• Student is on work experience, but arrived late</string>
    <string name="unjustified_desc">• Student is not in class, with no explanation given \n• Student has elected to stay away from class (eg, avoiding a test; went to the shops) \n• Student is not at school, and the caregiver’s explanation is not justifiable according to school policy (eg, went shopping for clothes; stayed home to look after family member) \n• Student is on holiday during term time, in New Zealand or overseas</string>
    <string name="justified_desc">• Student is not in class, and the caregiver’s explanation is justifiable according to school policy (eg, couldn’t get to school due to road closure; bereavement; national or local representation in a sporting or cultural event) \n• Student has a medical appointment (eg, doctor or dentist) \n• Student is at home, or in hospital, because of a medical reason \n• Student is away from school on exam leave or unsupervised study \n• Student has been stood down or suspended </string>
    <string name="overseas_desc">• Student is visiting or accompanying a family member who is on an overseas posting - diplomatic or military.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>